force-app/main/default/objects/Account/fields/Applicant_s_Liquid_Net_Worth__c.field-meta.xml
<CustomField>
    <fullName>Applicant_s_Liquid_Net_Worth__c</fullName>
    <label>Applicant&apos;s Liquid Net Worth</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Applicant_Liquid_Net_Worth</valueSetName>
    </valueSet>
</CustomField>