force-app/main/default/objects/Account/fields/Balance_Crypto__c.field-meta.xml
<CustomField>
    <fullName>Balance_Crypto__c</fullName>
    <label>Balance (Crypto)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>