force-app/main/default/objects/Account/fields/Balance_EUR__c.field-meta.xml
<CustomField>
    <fullName>Balance_EUR__c</fullName>
    <label>Balance EUR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>