force-app/main/default/objects/Account/fields/Balance_GBP__c.field-meta.xml
<CustomField>
    <fullName>Balance_GBP__c</fullName>
    <label>Balance GBP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>