force-app/main/default/objects/Account/fields/Balance_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Balance_Last_Updated__c</fullName>
    <label>Balance Last Updated</label>
    <type>DateTime</type>
</CustomField>