force-app/main/default/objects/Account/fields/Balance_USD__c.field-meta.xml
<CustomField>
    <fullName>Balance_USD__c</fullName>
    <label>Balance USD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>