force-app/main/default/objects/Account/fields/Bank_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Bank_Accounts__c</fullName>
    <label>Bank Accounts</label>
    <type>TextArea</type>
</CustomField>