force-app/main/default/objects/Account/fields/Banking_Rails_Configured__c.field-meta.xml
<CustomField>
    <fullName>Banking_Rails_Configured__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Auto-ticked by the Confirm Go Live flow after verifying Bank Account records exist.</description>
    <label>Banking Rails Configured</label>
    <type>Checkbox</type>
</CustomField>