force-app/main/default/objects/Account/fields/CEO_Email__c.field-meta.xml
<CustomField>
    <fullName>CEO_Email__c</fullName>
    <defaultValue>&apos;itdev@lydiamgroup.com&apos;</defaultValue>
    <label>CEO Email</label>
    <type>Email</type>
</CustomField>