force-app/main/default/objects/Account/fields/Client_Code__c.field-meta.xml
<CustomField>
    <fullName>Client_Code__c</fullName>
    <externalId>true</externalId>
    <label>Client Code</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>