force-app/main/default/objects/Account/fields/Closed_By__c.field-meta.xml
<CustomField>
    <fullName>Closed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user who closed this account. Auto-populated by flow.</description>
    <label>Closed By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Closed Accounts</relationshipLabel>
    <relationshipName>Closed_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>