force-app/main/default/objects/Account/fields/Closure_Date__c.field-meta.xml
<CustomField>
    <fullName>Closure_Date__c</fullName>
    <description>Date the account was closed. Auto-stamped by Close Account flow.</description>
    <label>Closure Date</label>
    <type>Date</type>
</CustomField>