force-app/main/default/objects/Account/fields/Closure_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closure_Reason__c</fullName>
    <description>Reason for closing this account. Required before moving to Closed stage.</description>
    <label>Closure Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>