force-app/main/default/objects/Account/fields/Compliance_Approved__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Compliance Approved</label>
    <type>Checkbox</type>
</CustomField>