force-app/main/default/objects/Account/fields/Compliance_Signoff_By__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Signoff_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user who performed the compliance sign-off. Auto-populated by flow.</description>
    <label>Compliance Sign-Off By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Compliance Sign-Offs</relationshipLabel>
    <relationshipName>Compliance_Signoffs</relationshipName>
    <type>Lookup</type>
</CustomField>