force-app/main/default/objects/Account/fields/Compliance_Signoff_Date__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Signoff_Date__c</fullName>
    <description>Date compliance approved this client for onboarding. Set via Compliance Sign-Off screen flow.</description>
    <label>Compliance Sign-Off Date</label>
    <type>Date</type>
</CustomField>