force-app/main/default/objects/Account/fields/Compliance_Signoff_Notes__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Signoff_Notes__c</fullName>
    <description>Justification and notes entered by compliance during sign-off.</description>
    <label>Compliance Sign-Off Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>