force-app/main/default/objects/Account/fields/Compliance_Signoff_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Signoff_Timestamp__c</fullName>
    <description>Exact date and time compliance approved. Auto-stamped by flow.</description>
    <label>Compliance Sign-Off Timestamp</label>
    <type>DateTime</type>
</CustomField>