force-app/main/default/objects/Account/fields/Confirmation_Letter_Sent__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Letter_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ticked when the account confirmation letter has been sent to the client. Required before Go Live.</description>
    <label>Confirmation Letter Sent</label>
    <type>Checkbox</type>
</CustomField>