force-app/main/default/objects/Account/fields/Countries_Sent_To__c.field-meta.xml
<CustomField>
    <fullName>Countries_Sent_To__c</fullName>
    <description>Countries where funds will be sent to.</description>
    <label>Countries Funds Will Be Sent To</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>