force-app/main/default/objects/Account/fields/Country_of_Incorporation_or_Domicile__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Incorporation_or_Domicile__c</fullName>
    <label>Country of Incorporation or Domicile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>