force-app/main/default/objects/Account/fields/Currencies_to_Receive__c.field-meta.xml
<CustomField>
    <fullName>Currencies_to_Receive__c</fullName>
    <description>Currencies the client will be receiving/buying.</description>
    <label>Currencies to Receive</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>