force-app/main/default/objects/Account/fields/Currencies_to_Send__c.field-meta.xml
<CustomField>
    <fullName>Currencies_to_Send__c</fullName>
    <description>Currencies the client will be sending/selling.</description>
    <label>Currencies to Send</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>