force-app/main/default/objects/Account/fields/Does_the_Applicant_have_an_investment_po__c.field-meta.xml
<CustomField>
    <fullName>Does_the_Applicant_have_an_investment_po__c</fullName>
    <label>Does the Applicant have an investment po</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>