force-app/main/default/objects/Account/fields/Does_the_largest_shareholder__c.field-meta.xml
<CustomField>
    <fullName>Does_the_largest_shareholder__c</fullName>
    <label>Does the largest shareholder</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>