force-app/main/default/objects/Account/fields/EDD_Reason__c.field-meta.xml
<CustomField>
    <fullName>EDD_Reason__c</fullName>
    <description>Reason why Enhanced Due Diligence is required.</description>
    <label>EDD Reason</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>