force-app/main/default/objects/Account/fields/EDD_Required__c.field-meta.xml
<CustomField>
    <fullName>EDD_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether Enhanced Due Diligence is required based on onboarding risk assessment.</description>
    <label>EDD Required</label>
    <type>Checkbox</type>
</CustomField>