force-app/main/default/objects/Account/fields/Email_for_Notifications__c.field-meta.xml
<CustomField>
    <fullName>Email_for_Notifications__c</fullName>
    <label>Email for Notifications</label>
    <type>Email</type>
</CustomField>