force-app/main/default/objects/Account/fields/Expected_Transactions_per_Month__c.field-meta.xml
<CustomField>
    <fullName>Expected_Transactions_per_Month__c</fullName>
    <description>Expected number of transactions per month from onboarding.</description>
    <label>Expected Transactions per Month</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>