force-app/main/default/objects/Account/fields/FX_Currency_Pairs__c.field-meta.xml
<CustomField>
    <fullName>FX_Currency_Pairs__c</fullName>
    <description>Currency pairs the client trades or transacts in.</description>
    <label>FX Currency Pairs</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>