force-app/main/default/objects/Account/fields/FX_Forward_Contracts_Required__c.field-meta.xml
<CustomField>
    <fullName>FX_Forward_Contracts_Required__c</fullName>
    <description>Whether forward contracts or hedging are required.</description>
    <label>FX Forward Contracts Required</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>