force-app/main/default/objects/Account/fields/FX_Hedging_Needs__c.field-meta.xml
<CustomField>
    <fullName>FX_Hedging_Needs__c</fullName>
    <description>Description of FX hedging needs.</description>
    <label>FX Hedging Needs</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>