force-app/main/default/objects/Account/fields/Geographic_Exposure__c.field-meta.xml
<CustomField>
    <fullName>Geographic_Exposure__c</fullName>
    <description>Geographic exposure for private individual clients from onboarding risk assessment.</description>
    <label>Geographic Exposure</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>