force-app/main/default/objects/Account/fields/Has_Submitted_Application__c.field-meta.xml
<CustomField>
    <fullName>Has_Submitted_Application__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to TRUE by flow when a linked Onboarding Application is submitted. Used to gate the Lead to Opportunity stage transition.</description>
    <inlineHelpText>Automatically managed. Do not edit manually.</inlineHelpText>
    <label>Has Submitted Application</label>
    <type>Checkbox</type>
</CustomField>