force-app/main/default/objects/Account/fields/ID_Passport_Number__c.field-meta.xml
<CustomField>
    <fullName>ID_Passport_Number__c</fullName>
    <label>ID Passport Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>