force-app/main/default/objects/Account/fields/Investment_Objectives__c.field-meta.xml
<CustomField>
    <fullName>Investment_Objectives__c</fullName>
    <description>Investment objectives for advisory clients.</description>
    <label>Investment Objectives</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Capital_Preservation</fullName>
                <label>Capital Preservation</label>
            </value>
            <value>
                <fullName>Growth</fullName>
            </value>
            <value>
                <fullName>Income_Generation</fullName>
                <label>Income Generation</label>
            </value>
            <value>
                <fullName>Hedging</fullName>
            </value>
            <value>
                <fullName>Diversification</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>