force-app/main/default/objects/Account/fields/Is_the_Company_regulated_by_any_governme__c.field-meta.xml
<CustomField>
    <fullName>Is_the_Company_regulated_by_any_governme__c</fullName>
    <label>Is the Company regulated by government</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>