force-app/main/default/objects/Account/fields/Is_there_more_than_1_Shareholder__c.field-meta.xml
<CustomField>
    <fullName>Is_there_more_than_1_Shareholder__c</fullName>
    <label>Is there more than 1 Shareholder</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>