force-app/main/default/objects/Account/fields/Legal_Entity_Identifier_LEI__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity_Identifier_LEI__c</fullName>
    <label>Legal Entity Identifier (LEI)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>