force-app/main/default/objects/Account/fields/Liquidity_venue_in_the_prior_30_days__c.field-meta.xml
<CustomField>
    <fullName>Liquidity_venue_in_the_prior_30_days__c</fullName>
    <label>Liquidity venue in the prior 30 days</label>
    <length>255</length>
    <type>Text</type>
</CustomField>