force-app/main/default/objects/Account/fields/List_of_Shareholders_with__c.field-meta.xml
<CustomField>
    <fullName>List_of_Shareholders_with__c</fullName>
    <label>List of Shareholders with</label>
    <length>255</length>
    <type>Text</type>
</CustomField>