force-app/main/default/objects/Account/fields/Onboarding_Channel__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Channel__c</fullName>
    <description>Channel through which the client was onboarded.</description>
    <label>Onboarding Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ExperienceCloud</fullName>
                <label>Experience Cloud</label>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>API</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>