force-app/main/default/objects/Account/fields/Outstanding_Documents__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Documents__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Count of Document Checklist records still at Required status. Maintained by flow. Must be 0 before moving to Paperwork Received.</description>
    <inlineHelpText>Automatically updated. Shows how many documents are still outstanding.</inlineHelpText>
    <label>Outstanding Documents</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>