force-app/main/default/objects/Account/fields/Paperwork_Requested__c.field-meta.xml
<CustomField>
    <fullName>Paperwork_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ticked by staff to confirm that the KYC document request has been sent to the client. Required before moving stage from Opportunity to Paperwork Sent.</description>
    <inlineHelpText>Add all required documents to the Document Checklist first, then tick this box to confirm the request was sent to the client.</inlineHelpText>
    <label>Paperwork Requested</label>
    <type>Checkbox</type>
</CustomField>