force-app/main/default/objects/Account/fields/Payment_Flow_Types__c.field-meta.xml
<CustomField>
    <fullName>Payment_Flow_Types__c</fullName>
    <description>Types of payment flows the client uses.</description>
    <label>Payment Flow Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1st_to_1st</fullName>
                <label>1st to 1st Party</label>
            </value>
            <value>
                <fullName>1st_to_3rd</fullName>
                <label>1st to 3rd Party</label>
            </value>
            <value>
                <fullName>3rd_to_1st</fullName>
                <label>3rd to 1st Party</label>
            </value>
            <value>
                <fullName>3rd_to_3rd</fullName>
                <label>3rd to 3rd Party</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>