force-app/main/default/objects/Account/fields/PEP_Flag__c.field-meta.xml
<CustomField>
    <fullName>PEP_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether PEP exposure was identified during onboarding risk assessment.</description>
    <label>PEP Flag</label>
    <type>Checkbox</type>
</CustomField>