force-app/main/default/objects/Account/fields/Politically_exposed_Person__c.field-meta.xml
<CustomField>
    <fullName>Politically_exposed_Person__c</fullName>
    <label>Politically exposed Person</label>
    <length>255</length>
    <type>Text</type>
</CustomField>