force-app/main/default/objects/Account/fields/Purpose_of_Account__c.field-meta.xml
<CustomField>
    <fullName>Purpose_of_Account__c</fullName>
    <label>Purpose of Account</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hedging</fullName>
            </value>
            <value>
                <fullName>Speculation</fullName>
            </value>
            <value>
                <fullName>Trading for Clients</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>