force-app/main/default/objects/Account/fields/Purpose_of_Account_Other__c.field-meta.xml
<CustomField>
    <fullName>Purpose_of_Account_Other__c</fullName>
    <label>Purpose of Account Other (please specify</label>
    <length>255</length>
    <type>Text</type>
</CustomField>