force-app/main/default/objects/Account/fields/Regulator_Name__c.field-meta.xml
<CustomField>
    <fullName>Regulator_Name__c</fullName>
    <description>Name of the regulatory body overseeing the client.</description>
    <label>Regulator Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>