force-app/main/default/objects/Account/fields/Regulatory_Jurisdiction__c.field-meta.xml
<CustomField>
    <fullName>Regulatory_Jurisdiction__c</fullName>
    <description>Jurisdiction or country where the client is regulated.</description>
    <label>Regulatory Jurisdiction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>