force-app/main/default/objects/Account/fields/Regulatory_Licence_Number__c.field-meta.xml
<CustomField>
    <fullName>Regulatory_Licence_Number__c</fullName>
    <description>Regulatory licence or registration number.</description>
    <label>Regulatory Licence Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>