force-app/main/default/objects/Account/fields/Sanctions_Flag__c.field-meta.xml
<CustomField>
    <fullName>Sanctions_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether sanctions exposure was identified during onboarding risk assessment.</description>
    <label>Sanctions Flag</label>
    <type>Checkbox</type>
</CustomField>