force-app/main/default/objects/Account/fields/Services_Required__c.field-meta.xml
<CustomField>
    <fullName>Services_Required__c</fullName>
    <description>Services required by the client from onboarding.</description>
    <label>Services Required</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FX</fullName>
            </value>
            <value>
                <fullName>Crypto</fullName>
            </value>
            <value>
                <fullName>Advisory</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>