force-app/main/default/objects/Account/fields/Source_of_Funds__c.field-meta.xml
<CustomField>
    <fullName>Source_of_Funds__c</fullName>
    <label>Source of Funds</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Proprietary  Funds</fullName>
            </value>
            <value>
                <fullName>Client Funds</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>