force-app/main/default/objects/Account/fields/Source_of_Funds_Text__c.field-meta.xml
<CustomField>
    <fullName>Source_of_Funds_Text__c</fullName>
    <label>Source of Funds Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>