force-app/main/default/objects/Account/fields/Source_of_Wealth__c.field-meta.xml
<CustomField>
    <fullName>Source_of_Wealth__c</fullName>
    <label>Source of Wealth</label>
    <length>255</length>
    <type>Text</type>
</CustomField>