force-app/main/default/objects/Account/fields/Source_of_Wealth_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Source_of_Wealth_Explanation__c</fullName>
    <label>Source of Wealth Explanation</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>