force-app/main/default/objects/Account/fields/Source_of_Wealth_of_Owners__c.field-meta.xml
<CustomField>
    <fullName>Source_of_Wealth_of_Owners__c</fullName>
    <label>Source of Wealth of Owners</label>
    <length>255</length>
    <type>Text</type>
</CustomField>