force-app/main/default/objects/Account/fields/Tax_Identification_Number__c.field-meta.xml
<CustomField>
    <fullName>Tax_Identification_Number__c</fullName>
    <label>Tax Identification Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>