force-app/main/default/objects/Account/fields/Time_Horizon_Years__c.field-meta.xml
<CustomField>
    <fullName>Time_Horizon_Years__c</fullName>
    <description>Investment time horizon in years.</description>
    <label>Time Horizon (Years)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>