force-app/main/default/objects/Account/fields/Total_Crypto__c.field-meta.xml
<CustomField>
    <fullName>Total_Crypto__c</fullName>
    <label>Total Crypto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>