force-app/main/default/objects/Account/fields/Total_Est_Net_Profit__c.field-meta.xml
<CustomField>
    <fullName>Total_Est_Net_Profit__c</fullName>
    <label>Total Est Net Profit</label>
    <summarizedField>Trade__c.Est_Net_Profit__c</summarizedField>
    <summaryForeignKey>Trade__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>