force-app/main/default/objects/Account/fields/Total_Fiat__c.field-meta.xml
<CustomField>
    <fullName>Total_Fiat__c</fullName>
    <label>Total Fiat</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>