force-app/main/default/objects/Account/fields/Total_Gross_Profit__c.field-meta.xml
<CustomField>
    <fullName>Total_Gross_Profit__c</fullName>
    <label>Total Gross Profit</label>
    <summarizedField>Trade__c.Gross_Profit__c</summarizedField>
    <summaryForeignKey>Trade__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>